Fixed an ewfUiSideTabAndContentContainer grid bug that allowed the content area to be as wide as it wanted rather than being constrained. See https://stackoverflow.com/a/52861514/35349 and https://github.com/w3c/csswg-drafts/issues/1777.

--- a/Core/EnterpriseWebFramework/StaticFiles/styles/ui/layout.css
+++ b/Core/EnterpriseWebFramework/StaticFiles/styles/ui/layout.css
@@ -385,7 +385,7 @@ ewfUiSideTabAndContentContainer {
 	                   "sidebar action"
 	                   "sidebar content"
 	                   "sidebar foot";
-	grid-template-columns: auto 1fr;
+	grid-template-columns: auto minmax( 0, 1fr );
 	grid-template-rows: auto auto 1fr;
 }
 ewfUiSideTabContainer {
